# simple-mcp-server

./: Dockerfile  README.md  docker-compose.yml  mcp-client.py  mcp-server.py  pyproject.toml
