[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-mcp-server"
version = "0.0.1"
description = "A Model Context Protocol server example"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "python-dotenv",
    "uvicorn>=0.34.1",
    "tomli>=2.0.0",
]